Removed media queires for CH lettering, added template components for Home page

--- a/client/styles/Home.module.css
+++ b/client/styles/Home.module.css
@@ -1,3 +1,29 @@
+.VStack {
+  height: 2000px;
+  justify-content: space-between;
+}
+.LetterDiv {
+  margin-bottom: 12px;
+  
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* .container {
   padding: 0 2rem;
 }
