--- a/client/styles/SvgLettersWaves.module.css
+++ b/client/styles/SvgLettersWaves.module.css
@@ -2,32 +2,38 @@
     /* transition: 1s font-size;
     transition: .5s top; */
     position: absolute;
-    top: 118px;
+    /* top: 118px; */
     left: 0;
+    /* margin-top: 10px;
+    margin-bottom: 10px;  */
     
     
 }
 .svg rect {
     fill: white;
     mask: url(#mask);
-    width: 100%;
+    /* width: 100%;
+    max-height: 500px; */
 }
 
 .svg > rect {
     fill: #FFFFFF;
+    max-height: 500px;
 }
 .video {
     width: 100%;
     height: 100%;
+    max-height: 495px; 
 }
-@media screen and (max-width: 1200px) {
+/* @media screen and (max-width: 1200px) {
     .svg {
-        font-size:15em;
+        font-size:20em;
         top: 100px;
         height: 500px
     }
     .video {
-        height: 70% 
+        height: 100% ;
+        max-height: 270px;
     }
 }
 
@@ -38,7 +44,8 @@
         height: 500px
     }
     .video {
-        height: 70% 
+        height: 70%;
+        max-height: 300px;
     }
     .svg > rect{
         height: 90%
@@ -51,7 +58,8 @@
         height: 400px
     }
     .video {
-        height: 80% 
+        height: 75%;
+        max-height: 300px; 
     }
     .svg rect{
         y:50;
@@ -68,7 +76,8 @@
         height: 400px
     }
     .video {
-        height: 80% 
+        height: 80%;
+        max-height: 400px; 
     }
     .svg rect{
         y:50;
@@ -77,4 +86,4 @@
         height: 80%;
         y: 50;
     }
-}
+} */
