--- a/client/styles/SvgLettersFire.module.css
+++ b/client/styles/SvgLettersFire.module.css
@@ -3,7 +3,7 @@
     /* transition: 1s font-size;
     transition: 1s top; */
     position: absolute;
-    top: 118px;
+    /* top: 118px; */
     left: 0;
     
     
@@ -11,7 +11,7 @@
 .svg rect {
     fill: white;
     mask: url(#mask);
-    width: 100%;
+    /* width: 100%; */
 }
 
 .svg > rect {
@@ -20,15 +20,17 @@
 .video {
     width: 100%;
     height: 100%;
+    max-height: 498px;
 }
-@media screen and (max-width: 1200px) {
+/* @media screen and (max-width: 1200px) {
     .svg {
         font-size:15em;
         top: 100px;
         height: 500px
     }
     .video {
-        height: 70% 
+        height: 70%;
+        
     }
 }
 
@@ -78,4 +80,4 @@
         height: 80%;
         y: 50;
     }
-}
+} */
